# D3D_Samples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Code/: CMakeLists.txt
Code/DirectX/: Application.cpp  Application.h  BaseApplication.h  FileResource.h  FrameRateCounter.h  GraphicsSystem.cpp  GraphicsSystem.h  IApplication.h  ISystem.h  MainWindow.h  RefCounter.h  Renderer.h  ResourceSystem.h  Shader.cpp  Shader.h  System.h  Texture.h  WindowSystem.h  main.cpp
Code/DirectX/Rendering/: Renderer.h  Shader.cpp  Shader.h  Texture.h
Code/JustTriangle/: CMakeLists.txt  GraphicsSystem.cpp  GraphicsSystem.h
Code/JustTriangle/Rendering/: Effect.cpp  Effect.h  Shader.cpp  Shader.h  ShaderTemplate.cpp  ShaderTemplate.h  Texture.cpp  Texture.h
Code/Keng/: CMakeLists.txt
Code/Keng/Base/: CMakeLists.txt
Code/Keng/Base/src/Serialization/: OpenArchiveJSON.cpp  ReadFileToBuffer.cpp
Code/Keng/Core/: CMakeLists.txt
Code/Keng/Core/src/: Application.cpp  Application.h  CreateApplication.cpp  Effect.cpp  FwdDecl.h  GlobalEnvironment.cpp  GlobalEnvironment.h  GraphicsSystem.cpp  Module.cpp  Module.h  ResourceSystem.cpp  Shader.cpp  ShaderTemplate.cpp  System.cpp  Texture.cpp  UseMemoryManager.cpp  WindowSystem.cpp
Code/Keng/FileSystem/: CMakeLists.txt
Code/Keng/FileSystem/src/: CreateSystem.cpp  File.cpp  File.h  FileSystem.cpp  FileSystem.h  FwdDecl.h
Code/Keng/GPU/: CMakeLists.txt
Code/Keng/GPU/src/: Annotation.cpp  Annotation.h  CreateSystem.cpp  Device.cpp  Device.h  DeviceBuffer.cpp  DeviceBuffer.h  EnumConverter.cpp  EnumConverter.h  FwdDecl.h  GPUSystem.cpp  GPUSystem.h  InputLayout.h  Sampler.cpp  Sampler.h  UseMemoryManager.cpp
Code/Keng/GPU/src/D3D_11/: EnumConverter.cpp  EnumConverter.h
Code/Keng/GPU/src/PiplineInput/: InputLayout.cpp  InputLayout.h  Sampler.cpp  Sampler.h
Code/Keng/GPU/src/RenderTarget/: DepthStencil.cpp  DepthStencil.h  SwapChain.cpp  SwapChain.h  TextureRenderTarget.cpp  TextureRenderTarget.h  WindowRenderTarget.cpp  WindowRenderTarget.h
Code/Keng/GPU/src/Shader/: CompileShader.cpp  CompileShader.h  Shader.cpp  Shader.h  ShaderVersion.cpp  ShaderVersion.h
Code/Keng/Graphics/: CMakeLists.txt
Code/Keng/Graphics/src/: Annotation.cpp  Annotation.h  CreateSystem.cpp  Device.cpp  Device.h  DeviceBuffer.cpp  DeviceBuffer.h  Effect.cpp  FwdDecl.h  GraphicsSystem.cpp  GraphicsSystem.h  Sampler.cpp  Sampler.h  Shader.cpp  ShaderTemplate.cpp  SwapChain.cpp  SwapChain.h  Texture.cpp
Code/Keng/Graphics/src/D3D_11/: EnumConverter.cpp  EnumConverter.h
Code/Keng/Graphics/src/Effect/: Effect.cpp  Effect.h  EffectFabric.cpp  EffectFabric.h
Code/Keng/Graphics/src/RenderTarget/: DepthStencil.cpp  DepthStencil.h  SwapChain.cpp  SwapChain.h  (+4 more)
Code/Keng/GraphicsAPI/: CMakeLists.txt
Code/Keng/GraphicsAPI/src/: Annotation.cpp  Annotation.h  CreateSystem.cpp  Device.cpp  Device.h  DeviceBuffer.cpp  DeviceBuffer.h  FwdDecl.h  GraphicsAPISystem.cpp  GraphicsAPISystem.h  InputLayout.cpp  InputLayout.h  Sampler.cpp  Sampler.h
Code/Keng/GraphicsCommon/: CMakeLists.txt
Code/Keng/Memory/: CMakeLists.txt
Code/Keng/Memory/src/: Memory.cpp  MemoryManager.h  MemoryManger.cpp
Code/Keng/Reflection/: CMakeLists.txt
Code/Keng/Reflection/src/: CreateSystem.cpp  FwdDecl.h  ReflectionSystem.cpp  ReflectionSystem.h  Scope.cpp  Scope.h  TypeIsReflectedValidation.cpp  TypeOperatorsValidation.cpp
Code/Keng/Resource/: CMakeLists.txt
Code/Keng/Resource/src/: ResourceSystem.cpp  ResourceSystem.h
Code/Keng/ResourceSystem/: CMakeLists.txt
Code/Keng/ResourceSystem/src/: CreateSystem.cpp  DeviceResources.cpp  DeviceResources.h  ResourceSystem.cpp  ResourceSystem.h
Code/Keng/WindowSystem/: CMakeLists.txt
Code/Keng/WindowSystem/src/: CreateSystem.cpp  MainWindow.h  WindowSystem.cpp  WindowSystem.h
Code/Keng/include/Keng/: Application.h  GraphicsSystem.h
Code/Keng/src/: Application.cpp  Effect.cpp  GraphicsSystem.cpp  ResourceSystem.cpp  Shader.cpp  ShaderTemplate.cpp  System.cpp  Texture.cpp  WindowSystem.cpp  stb_image.h
Code/Launcher/: CMakeLists.txt  main.cpp
Code/Projects/: CMakeLists.txt
Code/Projects/FourierPrinter/: CMakeLists.txt
Code/Projects/FourierPrinter/src/: CreateSystem.cpp  FourierPrinterSystem.cpp  FourierPrinterSystem.h  FourierSeries.h  RangedFunction.h  SampleSystem.cpp  SampleSystem.h  SampledFunction.h  WaveBuffer.cpp  WaveBuffer.h  WaveRangedFunction.h
Code/Projects/MemoryProfiling/: CMakeLists.txt
Code/Projects/MemoryProfiling/src/: main.cpp
Code/Projects/ProjectECS/: CMakeLists.txt
Code/Projects/ProjectECS/src/: CreateSystem.cpp  ProjectECS.cpp  ProjectECS.h
Code/Projects/RenderText/: CMakeLists.txt
Code/Projects/RenderText/src/: CreateSystem.cpp  FreeType.cpp  FreeType.h  RenderTextSample.cpp  RenderTextSample.h  System.cpp  System.h
Code/Projects/SimpleQuad/: CMakeLists.txt  GraphicsSystem.cpp  GraphicsSystem.h  main.cpp
Code/Projects/SimpleQuad/src/: CreateSystem.cpp  GraphicsSystem.cpp  GraphicsSystem.h  SampleSystem.cpp  SampleSystem.h  SimpleQuadSystem.cpp  SimpleQuadSystem.h  main.cpp
Code/Projects/TexturedQuad/: CMakeLists.txt  GraphicsSystem.cpp  GraphicsSystem.h  main.cpp
Code/Projects/TexturedQuad/src/: CreateSystem.cpp  GraphicsSystem.cpp  GraphicsSystem.h  SampleSystem.cpp  SampleSystem.h  TexturedQuadSample.cpp  TexturedQuadSample.h  main.cpp
Code/SimpleQuad/: CMakeLists.txt  GraphicsSystem.cpp  GraphicsSystem.h  main.cpp
Code/TestSample/: GraphicsSystem.h
Code/TexturedQuad/: CMakeLists.txt  GraphicsSystem.cpp  GraphicsSystem.h  main.cpp
Code/Textures/: CMakeLists.txt  GraphicsSystem.cpp  GraphicsSystem.h  main.cpp
Code/Textures/Rendering/: Shader.h
Submodules/: CMakeLists.txt  for_each_submodule.py
Submodules/CopyAssets/: CMakeLists.txt
Submodules/FreeType/: CMakeLists.txt
Submodules/FreeType/lib/Debug/: freetyped.lib
Submodules/FreeType/lib/Release/: freetype.lib
Submodules/RapidXml/: CMakeLists.txt  Xml.h
Submodules/Yasli/: CMakeLists.txt
Submodules/Yasli/include/yasli/: Enum.h  PointersImpl.h  typeid.h
Submodules/Yasli/lib/: yasli-release.lib
(+347 files in other folders)
