cmake_minimum_required(VERSION 3.5.1)
project(SamplesDirectX)
set(root_dir "${CMAKE_CURRENT_SOURCE_DIR}")
set(submodules_dir "${root_dir}/submodules")
set(code_dir "${root_dir}/Code")
set(assets_dir "${CMAKE_SOURCE_DIR}/Assets")
set(bin_dir ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMake/")
include(cpp_config)
include(output_directory)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
add_subdirectory(${submodules_dir})
add_subdirectory(${code_dir})
set_target_properties(CopyAssets PROPERTIES FOLDER Utilities)
