cmake_minimum_required(VERSION 3.5.1)
project(SamplesDirectX)
set(root_dir "${CMAKE_CURRENT_SOURCE_DIR}")
set(submodules_dir "${root_dir}/submodules")
set(code_dir "${root_dir}/Code")
set(assets_dir "${CMAKE_SOURCE_DIR}/Assets")
set(configs_dir "${CMAKE_SOURCE_DIR}/Configs")
set(bin_dir ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMake/")
include(cpp_config)
include(output_directory)
include(copy_folder_target)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
add_subdirectory(${submodules_dir})
add_subdirectory(${code_dir})

copy_folder_target(CopyAssets "${CMAKE_SOURCE_DIR}/Assets" "${bin_dir}/$<CONFIG>/Assets" "Copying assets to bin folder")
set_target_properties(CopyAssets PROPERTIES FOLDER Utilities)

copy_folder_target(CopyConfigs "${CMAKE_SOURCE_DIR}/Configs" "${bin_dir}/$<CONFIG>/Configs" "Copying configs to bin folder")
set_target_properties(CopyConfigs PROPERTIES FOLDER Utilities)
