cmake_minimum_required(VERSION 3.5.1)
file(GLOB projects "${CMAKE_CURRENT_SOURCE_DIR}/*")
foreach(project ${projects})
    if(IS_DIRECTORY ${project})
        set(project_header_file "${project}/CMakeLists.txt")
        if(EXISTS ${project_header_file})
            add_subdirectory(${project})
        endif()
    endif()
endforeach()
