cmake_minimum_required(VERSION 3.5.1)
file(GLOB keng_modules "${CMAKE_CURRENT_SOURCE_DIR}/*")
set(added_subdirectories "")
set(dependencies_info "")
foreach(module ${keng_modules})
    if(IS_DIRECTORY ${module})
        set(project_header_file "${module}/CMakeLists.txt")
        if(EXISTS ${project_header_file})
            add_subdirectory(${module})
            set_target_properties(${added_target_name} PROPERTIES FOLDER Keng)
            list(APPEND added_subdirectories ${added_target_name})
        endif()
    endif()
endforeach()
set(found_projects ${added_subdirectories} PARENT_SCOPE)