cmake_minimum_required(VERSION 3.5.1)
file(GLOB projects "${CMAKE_CURRENT_SOURCE_DIR}/*")
set(added_subdirectories "")
foreach(project ${projects})
    if(IS_DIRECTORY ${project})
        set(project_header_file "${project}/CMakeLists.txt")
        if(EXISTS ${project_header_file})
            add_subdirectory(${project})
            set_target_properties(${added_target_name} PROPERTIES FOLDER Projects)
            list(APPEND added_subdirectories ${added_target_name})
        endif()
    endif()
endforeach()
set(found_projects ${added_subdirectories} PARENT_SCOPE)