cmake_minimum_required(VERSION 3.5.1)
include(generate_vs_filters)

set(keng_module_name KengGraphics)
set(KENG_${keng_module_name} true CACHE BOOL "Graphics")
if(NOT ${KENG_${keng_module_name}})
    return()
endif()

set(sources_dir ${CMAKE_CURRENT_SOURCE_DIR})
set(sources_exts "h" "cpp")
set(target_sources)

foreach(entry ${sources_exts})
    file(GLOB_RECURSE sources_by_ext "${sources_dir}/*.${entry}")
    list(APPEND target_sources "${sources_by_ext}")
endforeach()

add_library(${keng_module_name} SHARED "${target_sources}")
generate_vs_filters(${target_sources})
target_include_directories(${keng_module_name} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(${keng_module_name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
target_include_directories(${keng_module_name} PUBLIC "${root_dir}/Code/Keng/GPU/include")
target_include_directories(${keng_module_name} PUBLIC "${root_dir}/Code/Keng/ResourceSystem/include")
target_include_directories(${keng_module_name} PUBLIC "${root_dir}/Code/Keng/WindowSystem/include")
target_link_libraries(${keng_module_name} PUBLIC EverydayTools)
target_link_libraries(${keng_module_name} PUBLIC Yasli)
target_link_libraries(${keng_module_name} PUBLIC KengBase)
target_link_libraries(${keng_module_name} PUBLIC KengCore)
target_link_libraries(${keng_module_name} PUBLIC KengFileSystem)
target_link_libraries(${keng_module_name} PRIVATE d3d11.lib DXGI.lib D3DCompiler.lib)
target_link_libraries(${keng_module_name} PRIVATE WinWrappers)
target_link_libraries(${keng_module_name} PRIVATE FreeType)

if(${KENG_KengMemory})
    target_link_libraries(${keng_module_name} PRIVATE KengMemory)
    target_compile_definitions(${keng_module_name} PRIVATE "-DUSE_KENG_MEMORY")
endif()

set(added_target_name ${keng_module_name} PARENT_SCOPE)
