cmake_minimum_required(VERSION 3.5.1)
include(generate_vs_filters)
include(cxx_version)

set(target_name TexturedQuad)
set(target_desc "Quad with texture")
set(PROJECT_${target_name} true CACHE BOOL ${target_desc})
if(NOT ${PROJECT_${target_name}})
    return()
endif()

set(sources_dir ${CMAKE_CURRENT_SOURCE_DIR})
set(sources_exts "h" "cpp")
set(target_sources)

foreach(entry ${sources_exts})
    file(GLOB_RECURSE sources_by_ext "${sources_dir}/*.${entry}")
    list(APPEND target_sources ${sources_by_ext})
endforeach()

add_library(${target_name} MODULE ${target_sources})
generate_vs_filters(${target_sources})
target_include_directories(${target_name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(${target_name} PRIVATE "${root_dir}/Code/Keng/Core/include")
target_include_directories(${target_name} PRIVATE "${root_dir}/Code/Keng/ResourceSystem/include")
target_include_directories(${target_name} PRIVATE "${root_dir}/Code/Keng/WindowSystem/include")
target_include_directories(${target_name} PRIVATE "${root_dir}/Code/Keng/Graphics/include")
target_include_directories(${target_name} PRIVATE "${root_dir}/Code/Keng/GPU/include")
target_link_libraries(${target_name} PUBLIC KengBase)
target_link_libraries(${target_name} PUBLIC KengCore)
target_link_libraries(${target_name} PUBLIC KengFileSystem)
add_dependencies(${target_name} KengCore)
add_dependencies(${target_name} KengResourceSystem)
add_dependencies(${target_name} KengWindowSystem)
add_dependencies(${target_name} KengGraphics)
add_dependencies(${target_name} KengGPU)

if(${KENG_KengMemory})
    target_link_libraries(${target_name} PRIVATE KengMemory)
    target_compile_definitions(${target_name} PRIVATE "-DUSE_KENG_MEMORY")
endif()

set(added_target_name ${target_name} PARENT_SCOPE)
require_cxx_version(${target_name} 17)
disable_cxx_extensions(${target_name})
